codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__post_skill_use_hook_events_render_snapshot.snap
---
source: tui/src/chatwidget/tests/helpers.rs
expression: combined
---
• Running PostSkillUse hook: warming the skill hook

PostSkillUse hook (completed)
  warning: Heads up from the hook
  hook context: Remember the startup checklist.
