codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__pre_skill_use_hook_events_render_snapshot.snap
---
source: tui/src/chatwidget/tests/helpers.rs
expression: combined
---
• Running PreSkillUse hook: warming the skill hook

PreSkillUse hook (completed)
  warning: Heads up from the hook
  hook context: Remember the startup checklist.
